Add additional info
